[package]
name = "alex"
version = "0.1.0"
edition = "2021"
description = "A massive scale voxel engine"
repository = "https://github.com/ria8651/alex"
default-run = "alex"

[dependencies]
bevy = { version = "0.13", default-features = false, features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_pbr",
    "tonemapping_luts",
    "bevy_sprite",
    "multi-threaded",
    "png",
    "wayland",
] }
bevy_egui = "0.27"
fastanvil = "0.30"
fastnbt = "2.4"
serde_json = "1.0"
bevy-inspector-egui = "0.24"
wgpu = { version = "0.19", default-features = false }
bytemuck = "1.7"
anyhow = "1.0"
radsort = "0.1"
minecraft-assets = "0.0.6"
crossbeam = "0.8"
dot_vox = "5.1"
